--- a/src/SamplesRCL/SamplesList.razor
+++ b/src/SamplesRCL/SamplesList.razor
@@ -88,8 +88,9 @@
    <Header>Komponenteneinbettung / Unterkomponenten</Header>
    <Text>
     <ul>
-     <li><a href="/Samples/Komponentenhost_Zahl">Komponenteneinbettung (Zahl als Parameter)</a></li>
+     <li><a href="/Samples/Komponentenhost_ValueType">Komponenteneinbettung (Zahl als Parameter)</a></li>
      <li><a href="/Samples/Komponentenhost_Eigenertyp">Komponenteneinbettung (Eigener Typ als Parameter)</a></li>
+     <li><a href="/Samples/Komponentenhost_Misc">Komponenteneinbettung (verschiedene Beispiele)</a></li>
      <li><a href="/Samples/KaskadierendeParameter">Kaskadierende Parameter</a></li>
      <li><a href="/Samples/VorlagenbasierteKomponenten">Vorlagenbasierte Komponenten</a></li>
     </ul>
