--- a/src/MiracleList_Backend/Views/Shared/Components/ObjectDump/Default.cshtml
+++ b/src/MiracleList_Backend/Views/Shared/Components/ObjectDump/Default.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using ITVisions
 @using System.Globalization
 
 <div class="row">
@@ -6,6 +6,6 @@
  @foreach(var prop in Model)
  {
   <div class="col-xs-6">@prop.Key</div>
-  <div class="col-xs-6">@prop.Value</div>
+  <div class="col-xs-6">@(String.IsNullOrEmpty(prop.Value.ToString()) ? "-" : prop.Value.ToString())</div>
  }
 </div>
