--- a/src/MiracleList_Backend/Views/Client/Index.cshtml
+++ b/src/MiracleList_Backend/Views/Client/Index.cshtml
@@ -19,12 +19,10 @@
    <h2>Beantragung für Client-ID</h2>
 
    <div>
-    Sie benötigen eine personalisierte Client-ID, wenn Sie selbst einen Client für das MiracleList-Backend schreiben wollen. Die Client-ID ist bei der Login-Operation zu übergeben. Sie erhalten die Client-ID per E-Mail.
-    Bitte beachten Sie, dass eine Client-ID jederzeit widerrufen werden kann, wenn Sie diese missbrauchen.
+    Sie benötigen eine personalisierte Client-ID, wenn Sie selbst einen Client für das MiracleList-Backend schreiben wollen. Die Client-ID ist bei der Login-Operation im WebAPI zu übergeben. Nach der Registrierung auf dieser Seite erhalten die Client-ID per E-Mail. Bitte beachten Sie, dass eine Client-ID jederzeit widerrufen werden kann, wenn Sie diese missbrauchen.
    </div>
    <br />
    <div>
-
     Das ist mit dem MiracleList-Backend NICHT erlaubt:
     <ul>
      <li>Speicherung gesetzeswidriger Texte</li>
