--- a/src/MiracleList_BS/Pages/_Layout.cshtml
+++ b/src/MiracleList_BS/Pages/_Layout.cshtml
@@ -23,7 +23,7 @@
  <!-- Eigenständige CSS-Dateien und ICO-Dateien aus wwwRoot -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
  <link rel="stylesheet" href="/_content/MLBlazorRCL/styles.css" />
- <link rel="stylesheet" href="/_content/ITVisions.Blazor/styles.css" />
+ <link rel="stylesheet" href="/_content/ITVisions.Blazor/css/itvstyles.css" />
 
  <!-- -------- Für Radzen Components -->
  <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
