--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -9,7 +9,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
  <base href="/" />
 
- <title>MiracleList_BS / @("v" + System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString())</title>
+ <title>MiracleList_BU / @("v" + System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString())</title>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width" />
  <base href="/" />
