--- a/src/MiracleList_BU.Client/Components/Routes.razor
+++ b/src/MiracleList_BU.Client/Components/Routes.razor
@@ -1,6 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @inject NavigationManager NavigationManager
 
+@using System.Reflection
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.WebAssembly.Services
+@inject LazyAssemblyLoader LazyAssemblyLoader
+
+
 <Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly, typeof(MLBlazorRCL.Login.Login).Assembly, typeof(Samples.SamplesList).Assembly }">
 
  <Navigating>
@@ -42,3 +48,20 @@
 
 </Router>
 
+
+@code {
+// --------------- Für Lazy Loading
+ private List<Assembly> lazyLoadedAssemblies =
+    new List<Assembly>();
+
+ private async Task OnNavigateAsync(NavigationContext args)
+ {
+  Console.WriteLine("OnNavigateAsync: " + args.Path);
+  if (args.Path.Contains("samples", StringComparison.OrdinalIgnoreCase))
+  {
+   Console.WriteLine("Lazy Loading SamplesRCL.wasm...");
+   var assemblies = await LazyAssemblyLoader.LoadAssembliesAsync(new string[] { "SamplesRCL.wasm" });
+   lazyLoadedAssemblies.AddRange(assemblies);
+  }
+ }
+}
