--- a/src/SamplesRCL/SamplesList.razor
+++ b/src/SamplesRCL/SamplesList.razor
@@ -3,10 +3,10 @@
 @inject BlazorUtil Util
 @using ITVisions.Blazor.Controls
 
-<h3>Weitere Blazor-Beispiele aus dem Buch <a href="https://it-visions.de/blazorbuch">'ASP.NET Core Blazor'</a></h3>
+<h3>Weitere Blazor-Beispiele aus dem Buch <a href="https://www.it-visions.de/blazorbuch">'Blazor-Buch'</a> vom <a href="https://www.dotnet-doktor.de/">Dr. Holger Schwichtenberg</a> </h3>
 
 <p>
- Viele (aber nicht alle) Beispiele aus dem <a href="https://it-visions.de/blazorbuch">Blazor-Buch</a> drehen sich um das <a href="/main">MiracleList-Szenario</a>. Dies hat zwei Gründe:
+ Viele (aber nicht alle) Beispiele aus dem <a href="https://www.it-visions.de/blazorbuch">Blazor-Buch</a> drehen sich um das <a href="/main">MiracleList-Szenario</a>. Dies hat zwei Gründe:
  <ul>
   <li>Einige Beispiele passen inhaltlich einfach nicht in das Szenario "MiracleList".</li>
   <li>Aus didaktischen Gründen ist es an einigen Stellen geboten, einfachere Beispiele zu behandeln.</li>
@@ -14,6 +14,8 @@
 
  Diese Liste, sortiert nach Buchkapiteln, umfasst die Beispiele, die sich bewusst nicht die Geschäftslogik von MiracleList nutzen, weil sie fachlich nicht zu MiracleList passen oder weil didaktisch besser ist, ein Feature oder Verhalten isoliert darzustellen.
 </p>
+
+<p>Aktueller Rendering-Modus: <b>@Util.BlazorType</b></p>
 
 <div class="row">
  <div class="col-xs-6">
@@ -51,7 +53,6 @@
    </Text>
   </Card3>
 
-
   <Card3>
    <Header>Routing und Navigation</Header>
    <Text>
@@ -73,7 +74,6 @@
    </Text>
   </Card3>
 
-
   <Card3>
    <Header>Ereignisse und Ereignisbehandlung</Header>
    <Text>
@@ -82,7 +82,6 @@
     </ul>
    </Text>
   </Card3>
-
 
   <Card3>
    <Header>Komponenteneinbettung / Unterkomponenten</Header>
@@ -97,7 +96,6 @@
    </Text>
   </Card3>
 
-
   <Card3>
    <Header>Zustandsverwaltung</Header>
    <Text>
@@ -108,7 +106,6 @@
     </ul>
    </Text>
   </Card3>
-
 
   <Card3>
    <Header>Formulare/Eingabemasken und Datenbindung</Header>
