--- a/src/MLBlazorRCL/Texts/AboutMiracleList.razor
+++ b/src/MLBlazorRCL/Texts/AboutMiracleList.razor
@@ -9,9 +9,9 @@
  </div>
 </p>
 
-<h2>Vier Blazor-Implementierungen der MiracleList</h2>
+<h2>Fünf Blazor-Implementierungen der MiracleList</h2>
 
- Es gibt vier auf ASP.NET Core Blazor basierende Implementierung des MiracleList-Frontends:
+ Es gibt fünf auf ASP.NET Core Blazor basierende Implementierung des MiracleList-Frontends:
 <ul>
  <li><b>MiracleList_BS</b>: MiracleList mit Blazor Server (2-Tier mit Direktzugriff auf die Datenbank)</li>
  <li><b>MiracleList_BW</b>: MiracleList mit Blazor WebAssembly (3-Tier mit Zugriff auf die Daten über WebAPI-basierten Application Server)</li>
@@ -26,7 +26,7 @@
 
 <p>Aus technischer Sicht demonstrieren die Blazor-Implementierungen der MiracleList für Softwareentwickler folgende Funktionen von Blazor:</p>
 <ul>
- <li>Alle vier Blazor-Varianten (Blazor WebAssembly,Blazor Server,Blazor Desktop, Blazor MAUI) für Browser und als Hybridanwendung</li>
+ <li>Alle fünf Blazor-Varianten (Blazor WebAssembly,Blazor Server,Blazor Desktop, Blazor MAUI) für Browser und als Hybridanwendung</li>
  <li>Sehr viel Shared Code zwischen allen Blazor-Varianten mit einem gemeinsamen UI in einer Razor Class Library </li>
  <li>Abstraktion zwischen einer 2-Tier- und 3-Tier-Anwendung: Mit dem gleichen Komponenten sowohl direkt auf eine Datenbank zugreifen als auch Nutzung von WebAPIs auf einem Application Server</li>
  <li>Listenansichten mit Suchen und Filtern</li>
