Liste der verwendeten Komponenten in /About

--- a/src/MiracleList_BD/Web/Pages/About.razor
+++ b/src/MiracleList_BD/Web/Pages/About.razor
@@ -17,6 +17,8 @@
   <h2>WebView</h2>
 
   @((MarkupString)HybridSharedState.HostControl.WebView.ToNameValueString(attributeSeparator: "<br><b>", nameValueSeparator: "</b>: "))
+ 
+   <UsedComponents></UsedComponents>
  </div>
 
  <div class="col-xs-6">
