--- a/src/MiracleList_BM/Web/Pages/About.razor
+++ b/src/MiracleList_BM/Web/Pages/About.razor
@@ -13,6 +13,9 @@
   @*Dies ist ein Steuerelement aus RCL ITVisions.Blazor*@
   <SystemInfo Assembly="@typeof(Web.App).Assembly"></SystemInfo>
   <b>Managed Thread ID: </b>@System.Threading.Thread.CurrentThread.ManagedThreadId
+
+  <UsedComponents></UsedComponents>
+
   <h2>Backend-Server</h2>
   @ServerUrl
   <br />
