--- a/src/MiracleList_BS/Pages/About.razor
+++ b/src/MiracleList_BS/Pages/About.razor
@@ -32,6 +32,8 @@
   <b> WebRootFileProvider:</b> @env.WebRootFileProvider
   <br />
   <b> Environment:</b> @env.EnvironmentName
+
+  <UsedComponents></UsedComponents>
  </div>
 
  <div class="col-xs-6">
