--- a/src/MiracleList_BW/Pages/About.razor
+++ b/src/MiracleList_BW/Pages/About.razor
@@ -18,6 +18,8 @@
   <br />
   <b>Environment:</b> @env.Environment
   
+  <UsedComponents></UsedComponents>
+
   <h2>Backend-Server</h2>
   @ServerUrl
   <br />
