--- a/src/MiracleList_BD/Web/Pages/About.razor
+++ b/src/MiracleList_BD/Web/Pages/About.razor
@@ -18,7 +18,13 @@
 
   @((MarkupString)HybridSharedState.HostControl.WebView.ToNameValueString(attributeSeparator: "<br><b>", nameValueSeparator: "</b>: "))
  
-   <UsedComponents></UsedComponents>
+  <UsedComponents Components='
+                  (new SortedDictionary<string, Type>() {
+                 {"Entity Framework Core",typeof(Microsoft.EntityFrameworkCore.DbContext)},
+                 {"BlazorWebView",typeof(Microsoft.AspNetCore.Components.WebView.Wpf.BlazorWebView)},
+                 {"MessagePack",typeof(MessagePack.MessagePackSerializer)},
+})
+'></UsedComponents>
  </div>
 
  <div class="col-xs-6">
