--- a/src/ITVisions.Blazor/Controls/Alert.razor
+++ b/src/ITVisions.Blazor/Controls/Alert.razor
@@ -17,7 +17,7 @@ else
     <span aria-hidden="true">&times;</span>
   </button>
 }
-</div
+</div>
 
 
 @code {
@@ -29,12 +29,12 @@ else
  public string Type { get; set; } = "alert-primary";
 
  [Parameter]
- public RenderFragment? Title { get; set; }
+ public RenderFragment Title { get; set; }
 
  [Parameter]
- public RenderFragment? Text { get; set; }
+ public RenderFragment Text { get; set; }
 
   [Parameter]
- public RenderFragment? ChildContent { get; set; }
+ public RenderFragment ChildContent { get; set; }
 
 }
