--- a/src/ITVisions.Blazor/Controls/Card.razor
+++ b/src/ITVisions.Blazor/Controls/Card.razor
@@ -18,13 +18,13 @@
  public EventCallback OnHeaderClick { get; set; }
 
  [Parameter]
- public RenderFragment? Header { get; set; }
+ public RenderFragment Header { get; set; }
 
  [Parameter]
- public RenderFragment? Title { get; set; }
+ public RenderFragment Title { get; set; }
 
  [Parameter]
- public RenderFragment? Text { get; set; }
+ public RenderFragment Text { get; set; }
 
  /// <summary>
  /// Weitergabe sonstiger Attribute, z.B. class und style
