--- a/src/ITVisions.Blazor/Controls/ITVInputRadio.razor
+++ b/src/ITVisions.Blazor/Controls/ITVInputRadio.razor
@@ -15,7 +15,7 @@
  InputRadio<int> radio;
 
  [Parameter]
- public int Value
+ public int Value // TODO: Umbauen mit bind:after
  {
   get => _value;
   set
