--- a/src/ITVisions.Blazor/Controls/Switch.razor
+++ b/src/ITVisions.Blazor/Controls/Switch.razor
@@ -21,7 +21,7 @@
  private bool? _Value;
 
  [Parameter]
- public bool? Value
+ public bool? Value // TODO: Umbauen mit bind:after
  {
   get => _Value;
   set
