--- a/src/SamplesRCL/SamplesList.razor
+++ b/src/SamplesRCL/SamplesList.razor
@@ -92,6 +92,7 @@
      <li><a href="/Samples/Komponentenhost_Misc">Komponenteneinbettung (verschiedene Beispiele)</a></li>
      <li><a href="/Samples/KaskadierendeParameter">Kaskadierende Parameter</a></li>
      <li><a href="/Samples/VorlagenbasierteKomponenten">Vorlagenbasierte Komponenten</a></li>
+     <li><a href="/Samples/Fehlerbehandlung">Fehlerbehandlung mit Error Boundaries</a></li>
     </ul>
    </Text>
   </Card3>
@@ -102,7 +103,7 @@
     <ul>
      <li><a href="/Samples/StateManagement">Komponentenzustand</a></li>
      <li><a href="/Samples/Cookies">Cookies</a></li>
-     <li><a href="/Samples/Fehlerbehandlung">Fehlerbehandlung mit Error Boundaries</a></li>
+     <li><a href="/Samples/CounterPersistentComponentState">Persistent Component State</a></li>
     </ul>
    </Text>
   </Card3>
