Vermeiden von Warnungen und Null-Ref-Fehlern

--- a/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
+++ b/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
@@ -1,25 +1,13 @@
-﻿
-<div class="form-group form-check">
- <InputCheckbox class="form-check-input bigCheckbox" @bind-Value="Value" />
+﻿<div class="form-group form-check">
+ <InputCheckbox class="form-check-input bigCheckbox" @bind-Value="Value" @bind-Value:after="()=>ValueChanged.InvokeAsync(Value)" />
  <label @onclick="ChangeCheckboxState" class="form-check-label bigCheckboxLabel">@((MarkupString)Label)</label>
 </div>
 
 @code {
 
  #region Unterstützung für @bind-Value
-  private Boolean value;
-
  [Parameter]
- public Boolean Value // TODO: Umbauen mit bind:after
- {
-  get => value;
-  set
-  {
-   if (this.value == value) return;
-   this.value = value;
-   ValueChanged.InvokeAsync(value);
-  }
- }
+ public Boolean Value { get; set; }
 
  [Parameter]
  public EventCallback<Boolean> ValueChanged { get; set; }
