--- a/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
@@ -5,17 +5,32 @@
 
 <h1>Vorlagenbasierte Komponentenvorlagen</h1>
 
-<h3>ITVCheckbox</h3>
+<h3>ITVCheckbox/ITVInputRadio</h3>
 
 <ITVCheckbox @bind-Value="Aktiv" @bind-Value:after="Log"></ITVCheckbox>
+<br />
+Wert: @Aktiv
+<br />
 
+<InputRadioGroup @bind-Value="Zahl">
+ <ITVInputRadio Value="1" Label="Eins" ValueChanged="Log"></ITVInputRadio>
+ <ITVInputRadio Value="2" Label="Zwei" ValueChanged="Log"></ITVInputRadio>
+ <ITVInputRadio Value="3" Label="Drei" ValueChanged="Log"></ITVInputRadio>
+</InputRadioGroup>
+
+<br />
+Wert: @Zahl
+<br />
 @code
 {
+ enum Zahlen { Null, Eins, Zwei, Drei}
+
  bool Aktiv = true;
+ int Zahl = 1;
 
  void Log()
  {
-   Util.Log("Aktiv=" + Aktiv);
+   Util.Log("Aktiv=" + Aktiv + " Zahl=" + Zahl);
  }
 }
 
