--- a/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
+++ b/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
@@ -1,4 +1,4 @@
-﻿<div class="form-group form-check">
+﻿<div class="form-check">
  <InputCheckbox class="form-check-input bigCheckbox" @bind-Value="Value" @bind-Value:after="()=>ValueChanged.InvokeAsync(Value)" />
  <label @onclick="ChangeCheckboxState" class="form-check-label bigCheckboxLabel">@((MarkupString)Label)</label>
 </div>
